# pynigma

./: Makefile  pyproject.toml
pynigma/: main.py  pynigma.py
tests/: test_pynigma.py
