[project]
name = "pynigma"
version = "0.1.0"
description = "An implementation of the Enigma cypher device"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "coverage>=7.6.4",
]

[tool.uv]
dev-dependencies = [
    "ruff>=0.7.2",
]

[tool.coverage.run]
branch = true
source = ["pynigma", "tests"]

[tool.coverage.report]
fail_under = 100
show_missing = true

