[project]
name = "pynigma"
version = "0.1.0"
description = "An implementation of the Enigma cypher device"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "coverage>=7.6.4",
]

[tool.uv]
dev-dependencies = [
    "mypy>=1.13.0",
    "ruff>=0.7.2",
]

[tool.coverage.run]
branch = true
source = ["pynigma", "tests"]

[tool.coverage.report]
fail_under = 100
show_missing = true

[tool.ruff]
target-version = "py313"

line-length = 88

lint.select = ["E", "F", "I", "N"]
exclude = [".venv"]

fix = true

[tool.mypy]
disallow_untyped_defs = true
disallow_incomplete_defs = true
python_version = "3.13"
